@@ -484,108 +484,50 @@ void	zbx_remove_chars(register char *str, const char *charlist)
 	*str = '\0';
 }
 
-/*
- * Function: strlcpy, strlcat
- * Copyright (c) 1998 Todd C. Miller <Todd.Miller@courtesan.com>
- *
- * Permission to use, copy, modify, and distribute this software for any
- * purpose with or without fee is hereby granted, provided that the above
- * copyright notice and this permission notice appear in all copies.
- *
- * THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
- * WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
- * MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
- * ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
- * WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
- * ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
- * OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
- */
-
 /******************************************************************************
  *                                                                            *
  * Function: zbx_strlcpy                                                      *
  *                                                                            *
- * Purpose: replacement of insecure strncpy, same as OpenBSD's strlcpy        *
+ * Purpose: Copy src to string dst of size siz. At most siz - 1 characters    *
+ *          will be copied. Always null terminates (unless siz == 0).         *
  *                                                                            *
- * Copy src to string dst of size siz.  At most siz-1 characters              *
- * will be copied.  Always NUL terminates (unless siz == 0).                  *
- * Returns strlen(src); if retval >= siz, truncation occurred.                *
- *                                                                            *
- * Author: Todd C. Miller <Todd.Miller@courtesan.com>                         *
+ * Return value : the number of characters copied (excluding the null byte)   *
  *                                                                            *
  ******************************************************************************/
 size_t	zbx_strlcpy(char *dst, const char *src, size_t siz)
 {
-	char		*d = dst;
 	const char	*s = src;
-	size_t		n = siz;
 
-	/* copy as many bytes as will fit */
-	if (0 != n)
+	if (0 != siz)
 	{
-		while (0 != --n)
-		{
-			if ('\0' == (*d++ = *s++))
-				break;
-		}
+		while (0 != --siz && '\0' != *s)
+			*dst++ = *s++;
+
+		*dst = '\0';
 	}
 
-	/* not enough room in dst, add NUL and traverse rest of src */
-	if (0 == n)
-	{
-		if (0 != siz)
-			*d = '\0';	/* NUL-terminate dst */
-		while ('\0' != *s++)
-			;
-	}
-
-	return s - src - 1;	/* count does not include NUL */
+	return s - src;	/* count does not include null */
 }
 
 /******************************************************************************
  *                                                                            *
  * Function: zbx_strlcat                                                      *
  *                                                                            *
- * Purpose: replacement of insecure strncat, same as OpenBSD's strlcat        *
- *                                                                            *
- * Appends src to string dst of size siz (unlike strncat, size is the         *
- * full size of dst, not space left).  At most siz-1 characters               *
- * will be copied.  Always NUL terminates (unless siz <= strlen(dst)).        *
- * Returns strlen(src) + MIN(siz, strlen(initial dst)).                       *
- * If retval >= siz, truncation occurred.                                     *
- *                                                                            *
- * Author: Todd C. Miller <Todd.Miller@courtesan.com>                         *
+ * Purpose: Appends src to string dst of size siz (unlike strncat, size is    *
+ *          the full size of dst, not space left). At most siz - 1 characters *
+ *          will be copied. Always null terminates (unless                    *
+ *          siz <= strlen(dst)).                                              *
  *                                                                            *
  ******************************************************************************/
-size_t	zbx_strlcat(char *dst, const char *src, size_t siz)
+void	zbx_strlcat(char *dst, const char *src, size_t siz)
 {
-	char		*d = dst;
-	const char	*s = src;
-	size_t		n = siz;
-	size_t		dlen;
-
-	/* find the end of dst and adjust bytes left but don't go past end */
-	while (0 != n-- && '\0' != *d)
-		d++;
-	dlen = d - dst;
-	n = siz - dlen;
-
-	if (0 == n)
-		return dlen + strlen(s);
-
-	while ('\0' != *s)
+	while ('\0' != *dst)
 	{
-		if (1 != n)
-		{
-			*d++ = *s;
-			n--;
-		}
-		s++;
+		dst++;
+		siz--;
 	}
 
-	*d = '\0';
-
-	return dlen + (s - src);	/* count does not include NUL */
+	zbx_strlcpy(dst, src, siz);
 }
 
 /******************************************************************************
